fix: pin jax/flax

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,8 @@ install_requires =
     ftfy
     emoji
     pillow
-    jax
-    flax
+    jax==0.3.25
+    flax==0.6.3
     wandb
 
 [options.extras_require]
